Actualizo formulario con estilo lila pastel

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <input type="number" id="Edad" name="Edad" placeholder="Edad" <br><br><br>
 
     <label for="GENERO">GENERO</label><br>
-    <input type="radio" value="MASCULINO">
+    <input type="radio" value="MASCULINO" id="genero">
     <label for="MASCULINO">maculino
       <br>
       <input type="radio" value="URBANA">
@@ -25,7 +25,7 @@
         <br><br>
 
         <label for="ZONA">ZONA</label><br>
-        <input type="radio" value="RURAL">
+        <input type="radio" value="RURAL" id="zona">
         <label for="rural">rural
           <br>
           <input type="radio" value="URBANA">
