Se actualizo al modelo final

--- a/index.html
+++ b/index.html
@@ -13,33 +13,18 @@
     <label for="nombre">Nombre</label><br>
     <input type="text" id="nombre" name="nombre" placeholder="Nombre" <br><br><br>
 
-    <label for="EDAD">EDAD</label><br>
+    <label for="EDAD">Edad</label><br>
     <input type="number" id="Edad" name="Edad" placeholder="Edad" <br><br><br>
 
     <label for="GENERO">GENERO</label><br>
     <input type="radio" value="MASCULINO" id="genero">
-    <label for="MASCULINO">maculino
+    <label for="MASCULINO">Masculino
       <br>
       <input type="radio" value="URBANA">
       <label for="femenino">Femenino
         <br><br>
 
-        <label for="ZONA">ZONA</label><br>
-        <input type="radio" value="RURAL" id="zona">
-        <label for="rural">rural
-          <br>
-          <input type="radio" value="URBANA">
-          <label for="urbana">urbana
-
-            <br><br>
-
-            <label for="Centro Escolar">Centro Escolar</label><br>
-            <input type="text" id="Centro" name="Centro Escolar" placeholder="C.E Arturo Ambrgi..." <br><br><br>
-
-            <label for="Numero de infraestructura">Numero de infraestructura</label><br>
-            <input type="number" id="infraestructura" name="infraestructura" placeholder="Numero de infraestructura"
-              <br><br><br>
-
+  
             <label for="Numero de Telefono">Numero de Telefono</label><br>
             <input type="number" id="Telefono" name="fone" placeholder="Numero de Telefono" <br><br><br>
 
@@ -49,11 +34,11 @@
 
             <label for="EQUIPO ">Equipo Favorito y ¿por qué?</label><br>
             <textarea cols="35" rows="4" name="eqquipo" id="equipo" placeholder="Bayern por..."></textarea>
-            <br><br><br>
+            <br><br>
 
             <label for="JUGADOR ">jugador Favorito y ¿por qué?</label><br>
             <textarea cols="35" rows="4" name="jugador" id="jugador" placeholder="Ibrahimovic por..."></textarea>
-            <br><br><br>
+            <br><br>
             <button type="submit" id="boton"></button>
   </form>
 </body>
