Se actualizo al modelo final

--- a/index.html
+++ b/index.html
@@ -9,37 +9,38 @@
 
 <body>
   <form action="formulario" method="post">
-    
+
     <label for="nombre">Nombre</label><br>
     <input type="text" id="nombre" name="nombre" placeholder="Nombre" <br><br><br>
 
     <label for="EDAD">Edad</label><br>
     <input type="number" id="Edad" name="Edad" placeholder="Edad" <br><br><br>
 
-    <label for="GENERO">GENERO</label><br>
-    <input type="radio" value="MASCULINO" id="genero">
-    <label for="MASCULINO">Masculino
-      <br>
-      <input type="radio" value="URBANA">
-      <label for="femenino">Femenino
-        <br><br>
-
-  
-            <label for="Numero de Telefono">Numero de Telefono</label><br>
-            <input type="number" id="Telefono" name="fone" placeholder="Numero de Telefono" <br><br><br>
-
-            <label for="Email">Correo electronico</label><br>
-            <input type="email" id="nombre" name="nombre" placeholder="Messi@.com..." <br><br><br>
+    <label for="genero">Genero</label>
+    <br>
+    <input type="radio" id="Masculino" name="genero" value="Masculino">
+    <label for="masculino">Masculino</label>
+    <br>
+    <input type="radio" id="femenino" name="genero" value="Femenino">
+    <label for="femenino">Femenino</label>
+    <br><br>
 
 
-            <label for="EQUIPO ">Equipo Favorito y ¿por qué?</label><br>
-            <textarea cols="35" rows="4" name="eqquipo" id="equipo" placeholder="Bayern por..."></textarea>
-            <br><br>
+    <label for="Numero de Telefono">Numero de Telefono</label><br>
+    <input type="number" id="Telefono" name="fone" placeholder="Numero de Telefono" <br><br><br>
 
-            <label for="JUGADOR ">jugador Favorito y ¿por qué?</label><br>
-            <textarea cols="35" rows="4" name="jugador" id="jugador" placeholder="Ibrahimovic por..."></textarea>
-            <br><br>
-            <button type="submit" id="boton"></button>
+    <label for="Email">Correo electronico</label><br>
+    <input type="email" id="nombre" name="nombre" placeholder="Messi@.com..." <br><br><br>
+
+
+    <label for="EQUIPO ">Equipo Favorito y ¿por qué?</label><br>
+    <textarea cols="35" rows="4" name="eqquipo" id="equipo" placeholder="Bayern por..."></textarea>
+    <br><br>
+
+    <label for="JUGADOR ">jugador Favorito y ¿por qué?</label><br>
+    <textarea cols="35" rows="4" name="jugador" id="jugador" placeholder="Ibrahimovic por..."></textarea>
+    <br><br>
+    <button type="submit" id="boton"></button>
   </form>
 </body>
 
